plots, and clean up files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 models/
-sub-01/
-training_images/
-eeg_dataset.pkl
-images_dataset.pkl
-eeg_14_70_std.pth
 eeg_5_95_std.pth
+eeg_14_70_std.pth
 eeg_55_95_std.pth
 eeg_signals_raw_with_mean_std.pth
+things_eegs.pt
+things_images.pt
